Fix misalignment (observed in chrome 47 on Windows) due to min-width of video preview.

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 #capture-video, #capture-img{
-    min-width:300px;
+    width:300px;
     height:300px;
     object-fit: cover;
 }
